<resources>
    <string name="app_name">多普乐智能</string>
    <string name="text_initial">正在准备进入搜索</string>
    <string name="text_completing">正在完成最后的工作</string>
    <string name="text_exiting">正在退出搜索</string>
    <string name="text_wait_a_moment">请稍等</string>
    <string name="text_operation">通电后按图示操作</string>
    <string name="text_operation_indication">① 请长按需要配置的开关按键\n\n② 当听到开关“嘀”一声或开关指示灯闪烁后松开按键</string>
    <string name="button_next">下一步</string>
    <string name="button_confirm">确 定</string>
    <string name="button_cancel">取 消</string>
    <string name="button_select">选择模式</string>
    <string name="button_control">操控模式</string>
    <string name="button_cancel_select_all">取消全选</string>
    <string name="button_select_all">全 选</string>
    <string name="text_set_props">设置设备名称及房间</string>
    <string name="text_scene">场景</string>
    <string name="text_device">设备</string>
    <string name="text_home">首页</string>
    <string name="text_room">房间</string>
    <string name="text_all">全部</string>
    <string name="text_curtain">窗帘</string>
    <string name="text_panel">语音面板</string>
    <string name="text_temperature">空调</string>
    <string name="text_button">按键</string>
    <string name="text_voice">语音</string>
    <string name="text_no_voice">禁止语音</string>
    <string name="text_button_left">左键</string>
    <string name="text_button_middle">中键</string>
    <string name="text_button_right">右键</string>
    <string name="text_button_control">控制键</string>
    <string name="text_scene_left">左场景</string>
    <string name="text_scene_middle">中场景</string>
    <string name="text_scene_right">右场景</string>
    <string name="text_add_device">添加设备</string>
    <string name="text_add_scene">添加情景</string>
    <string name="text_select_device">选择设备</string>
    <string name="text_select_scene">选择情景</string>
    <string name="text_add_room">添加房间</string>
    <string name="text_modify_room">编辑房间</string>
    <string name="text_modify_task">编辑清单</string>
    <string name="text_save_task">确定更改</string>
    <string name="text_save_exit">保存退出</string>
    <string name="text_save">保存</string>
    <string name="text_reverse">全部反转</string>
    <string name="text_cancel_change">取消更改</string>
    <string name="text_display_home">在首页显示</string>
    <string name="text_name">名称</string>
    <string name="text_scene_name">场景名称</string>
    <string name="text_awake_keywords">唤醒词</string>
    <string name="text_input_keywords_hint">可输入多个唤醒词，用空格分隔</string>
    <string name="text_input">请输入</string>
    <string name="text_choose">请选择</string>
    <string name="text_set_background">设置背景</string>
    <string name="text_task_list">执行任务清单</string>
    <string name="text_device_task">设备任务</string>
    <string name="text_scene_task">情景任务</string>
    <string name="text_toggle_task">反转开关</string>
    <string name="text_create_scene">创建新情景</string>
    <string name="text_modify_scene">编辑情景</string>
    <string name="text_display_scene">查看情景</string>
    <string name="text_modify_device">编辑设备</string>
    <string name="text_select_background">选择背景图</string>
    <string name="text_no_task">未添加任务</string>
    <string name="text_create_room">创建新房间</string>
    <string name="button_finished">完 成</string>
    <string name="button_continue">继续添加</string>
    <string name="text_input_device_name">请输入设备名称</string>
    <string name="text_input_room_name">请输入房间名称</string>
    <string name="text_input_scene_name">请输入场景名称</string>
    <string name="text_field_input_error">名称不能为空！</string>
    <string name="text_duplicate_scene">自定义场景名称不能重复！</string>
    <string name="text_device_scene_amount">%1$d个设备，%2$d个场景</string>
    <string name="text_no_room">未创建房间，请点击“添加房间”创建</string>
    <string name="text_no_device">未发现设备</string>
    <string name="text_no_scene">未发现场景</string>
    <string name="text_off">off</string>
    <string name="text_exit_no_save">是否放弃保存退出？</string>
    <string name="text_device_exist">设备已存在，是否重新注册？</string>
    <string name="tts_device_pause">已经为您暂停</string>
    <string name="tts_device_on">已经为您打开</string>
    <string name="tts_device_off">已经为您关闭</string>
    <string name="tts_device_temperature">已经为您把%1$s调到</string>
    <string name="tts_scene_on">已经为您切换到</string>
    <string name="tts_appoint_devices">指定设备</string>
    <string name="tts_busy">不好意思，我正在忙，等下再喊我好吗</string>
    <string name="text_set_panel">设置语音指令</string>
    <string name="text_panel_switch">开关设备</string>
    <string name="text_panel_curtain">电机设备</string>
    <string name="text_found_new_version">发现新版本，是否下载安装？</string>
    <string name="text_downloading">正在下载，请稍候！</string>
    <string name="text_download_fail">下载失败，是否重新下载？</string>
    <string name="text_working">正在操作其他设备，请稍后再试！</string>
    <string name="text_set_task_success">任务配置成功！</string>
    <string name="text_set_task_fail">任务配置失败，请重新编辑！</string>
    <string name="text_fan_auto">自动</string>
    <string name="text_fan_low">低速</string>
    <string name="text_fan_mid">中速</string>
    <string name="text_fan_high">高速</string>
    <string name="text_temperature_cool">制冷</string>
    <string name="text_temperature_fan">送风</string>
    <string name="text_temperature_hot">制热</string>
    <string name="text_temperature_off">关闭</string>
    <string name="text_temperature_on">打开</string>
    <string name="text_temperature_degree">℃</string>
    <string name="text_task_temperature">选择场景操作</string>
    <string name="text_room_temperature">室内温度：</string>
    <string name="text_speech_hints">您可以尝试用“你好小易”呼唤我。</string>
    <string name="text_wakeup">你好小易</string>
    <string name="text_speech_music_hints">试试叫我"播放音乐"！</string>
    <string name="text_speech_device_hints">您也可以试试让我控制已添加的设备！</string>
    <string name="text_speech_and">和</string>
    <string name="text_speech_of">的</string>
    <string name="text_speech_open">开</string>
    <string name="text_speech_close">关,关闭,关掉</string>
    <string name="text_speech_all">全部,所有</string>
    <string name="text_speech_pause">暂停,停止</string>
    <string name="text_speech_high_level">高,大,快</string>
    <string name="text_speech_mid_level">中</string>
    <string name="text_speech_low_level">低,小,轻,微</string>
    <string name="text_speech_auto_level">自动</string>
    <string name="text_speech_temperature_mode">制冷,送风,制热</string>
    <string name="text_speech_split">,</string>
    <string name="text_delete_shortcut">是否删除当前快捷方式？</string>
    <string name="text_delete">删除</string>
    <string name="text_more">更多</string>
    <string name="text_select">选择</string>
    <string name="text_close">关闭</string>
    <string name="text_offline">离线</string>
    <string name="text_drag">拖动</string>
    <string name="text_pause">暂停</string>
</resources>