<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="204dp"
    android:layout_height="168dp"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/rl_my_dev"
        android:layout_width="194dp"
        android:layout_height="158dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/common_bg_style"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_drag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/text_drag"
            android:src="@mipmap/ic_drag" />

        <ImageView
            android:id="@+id/iv_device_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/text_device"/>

        <ImageView
            android:id="@+id/iv_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/text_offline"
            android:src="@mipmap/ic_offline" />

        <ImageView
            android:id="@+id/iv_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/text_button"
            android:src="@mipmap/ic_off" />

        <ImageView
            android:id="@+id/iv_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_switch"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/text_pause"
            android:src="@mipmap/ic_pause" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/device_name_text_size" />

        <com.leon.aicenter.component.MarqueeTextView
            android:id="@+id/tv_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_room_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/device_name_text_size" />

        <com.leon.aicenter.component.MarqueeTextView
            android:id="@+id/tv_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:layout_toStartOf="@id/tv_detail"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_selected"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/text_select"
        android:src="@mipmap/device_selected" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_delete"
        android:src="@mipmap/btn_delete" />

</RelativeLayout>