<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="132dp"
    android:layout_height="168dp"
    android:background="@android:color/transparent">

    <com.leon.aicenter.component.TintImageView
        android:id="@+id/tiv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp" />

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/text_set_background" />

    <ImageView
        android:id="@+id/iv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/text_select"
        android:src="@mipmap/scene_selected"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/text_drag"
        android:src="@mipmap/ic_drag"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_scene_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/scene_type_background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/text_voice"
        android:textColor="@color/text_off_color"
        android:textSize="@dimen/scene_type_text_size"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_delete"
        android:src="@mipmap/btn_delete"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/text_offline"
        android:src="@mipmap/ic_offline"
        android:visibility="invisible" />

    <com.leon.aicenter.component.MarqueeTextView
        android:id="@+id/tv_scene_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_room_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/device_name_text_size"
        android:visibility="invisible" />

    <com.leon.aicenter.component.MarqueeTextView
        android:id="@+id/tv_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="@color/text_off_color"
        android:textSize="@dimen/common_text_size"
        android:visibility="invisible" />
</RelativeLayout>