<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:id="@+id/rl_background"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/rl_scene_name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/rl_put_home"
        android:background="@drawable/label_bg"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_thumb_bg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/iv_more_bg" />

        <ImageView
            android:id="@+id/iv_more_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/ic_more" />

        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/iv_more_bg"
            android:text="@string/text_choose"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/text_set_background"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_put_home"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/rl_scene_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/label_bg"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_display_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/text_off"
            android:src="@mipmap/ic_switch_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/text_display_home"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_background"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/label_bg">

        <com.leon.aicenter.component.DragListView
            android:id="@+id/lv_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_task_list"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tv_add_device_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:focusable="true"
            android:text="@string/text_device_task"
            android:textColor="@color/text_button_style"
            android:textSize="@dimen/add_device_text_size"
            app:drawableStartCompat="@drawable/button_add_style" />

        <TextView
            android:id="@+id/tv_add_scene_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/tv_add_device_task"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:focusable="true"
            android:text="@string/text_scene_task"
            android:textColor="@color/text_button_style"
            android:textSize="@dimen/add_device_text_size"
            app:drawableStartCompat="@drawable/button_add_style" />

        <TextView
            android:id="@+id/tv_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/tv_add_scene_task"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:focusable="true"
            android:text="@string/text_reverse"
            android:textColor="@color/text_button_style"
            android:textSize="@dimen/add_device_text_size"
            app:drawableStartCompat="@drawable/button_reverse_style" />

        <TextView
            android:id="@+id/tv_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/tv_reverse"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:focusable="true"
            android:text="@string/text_modify_task"
            android:textColor="@color/text_button_style"
            android:textSize="@dimen/add_device_text_size"
            app:drawableStartCompat="@drawable/button_modify_style"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_save_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:focusable="true"
            android:text="@string/text_save_task"
            android:textColor="@color/text_button_style"
            android:textSize="@dimen/add_device_text_size"
            app:drawableStartCompat="@drawable/button_save_style" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/tv_save_task"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:focusable="true"
            android:text="@string/text_cancel_change"
            android:textColor="@color/text_button_style"
            android:textSize="@dimen/add_device_text_size"
            app:drawableStartCompat="@drawable/button_cancel_change_style"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_no_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_no_task"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size" />

        <TextView
            android:id="@+id/tv_task_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_task_list"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_scene_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/label_bg"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/text_scene_name"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size" />

        <TextView
            android:id="@+id/tv_scene_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/text_input"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_scene_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_keywords"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/label_bg"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/text_awake_keywords"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size" />

        <TextView
            android:id="@+id/tv_keywords_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/text_input"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_room"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/rl_scene_name"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/label_bg"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/text_more"
            android:src="@mipmap/ic_more" />

        <TextView
            android:id="@+id/tv_room_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/iv_more"
            android:text="@string/text_choose"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/iv_more"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/common_text_size"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/text_room"
            android:textColor="@color/text_off_color"
            android:textSize="@dimen/common_text_size" />
    </RelativeLayout>
</RelativeLayout>