<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background">

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/common_button_style"
        android:text="@string/button_confirm"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/button_text_size" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btn_close"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/label_bg"
        android:hint="@string/text_input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/title_text_size" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@color/device_background"
        android:contentDescription="@string/text_close"
        android:src="@drawable/button_close_style" />
</RelativeLayout>